# ChangeLog for app-admin/hddtemp
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/ChangeLog,v 1.11 2003/12/17 12:16:41 aliz Exp $

*hddtemp-0.3_beta10 (17 Dec 2003)

  17 Dec 2003; Daniel Ahlberg <aliz@gentoo.org> hddtemp-0.3_beta10.ebuild,
  hddtemp-0.3_beta8.ebuild, files/hddtemp.db:
  Version bump, keywords update and new hddtemp.db.

  01 Sep 2003; Daniel Ahlberg <aliz@gentoo.org> hddtemp-0.3_beta8.ebuild :
  I was working on this update too, but Martin commited his bump before me. 
  My new version uses the new configuration script and tries to download the latest hddtemp.db file.

*hddtemp-0.3_beta8 (31 Aug 2003)

  31 Aug 2003; Martin Holzer <mholzer@gentoo.org> hddtemp-0.3_beta8.ebuild:
  Version bumped.

*hddtemp-0.3_beta6-r1 (11 Jun 2003)

  11 Jun 2003; Robin Johnson <robbat2@gentoo.org> hddtemp-0.3_beta6-r1.ebuild:
  Changes to ebuild to make it easy to bump the version for getting the
  database updates. One reason for just not updating the hddtemp.db in the
  tree is that in some cases you might want to go back versions, and the
  author is also considering changing the hddtemp.db file format.
  Redo the concept of the hddtemp.db patch, using sed, so we can change the
  location inside the ebuild. This is important as we want to be able to
  easily update the file without worrying about CONFIG_PROTECT.

*hddtemp-0.3_beta6 (15 Apr 2003)

  09 May 2003; Martin Holzer <mholzer@gentoo.org> hddtemp-0.2.ebuild,
  hddtemp-0.3_beta6.ebuild:
  Updated Homepage. Closes #18742.

  15 Apr 2003; Martin Holzer <mholzer@gentoo.org> Manifest,
  hddtemp-0.2.ebuild, hddtemp-0.3_beta6.ebuild, files/hddtemp.db:
  Version bumped, moved hddtemp.db out of portage tree.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*hddtemp-0.2 (10 Jun 2002)

  29 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> hddtemp-0.2.ebuild :
