@@ -1,14 +1,14 @@
-MD5 8e97533aec3047a117d262cbc7dfce24 hddtemp-0.2.ebuild 889
-MD5 79760bb99370ebe4a3fd9349a1741abb hddtemp-0.3_beta6-r1.ebuild 1123
-MD5 74f6e7ddd8a33a80236664e8455c1e08 hddtemp-0.3_beta10.ebuild 1150
-MD5 1d5ab82585df356d6a9d0a851605e7ae hddtemp-0.3_beta6.ebuild 873
-MD5 97589fff962549ce471ea6f667cd0220 ChangeLog 2577
+MD5 80299a6410d5946cd617b455b1e40b8b ChangeLog 2836
+MD5 aa07929960900de6e228505a40a82d08 hddtemp-0.2.ebuild 888
+MD5 8a2032d01e9d0e0af6de397f32bc0c52 hddtemp-0.3_beta6-r1.ebuild 1122
+MD5 35ecb0d6325bb8c8d7a0fda9ff5f572f hddtemp-0.3_beta6.ebuild 872
+MD5 766acaedcf8f8931429e2c81cb6886e7 hddtemp-0.3_beta8.ebuild 1158
 MD5 37236013e0d26d43c6bff35a8a48e8ec metadata.xml 220
-MD5 f9831e4211a38d3cf8c1b1ef20c909d4 hddtemp-0.3_beta8.ebuild 1158
-MD5 e42a32b0df5005090c105881a4cb02cc files/digest-hddtemp-0.3_beta6-r1 133
-MD5 fb10a6dcf20731e49bdd8a408702e27a files/digest-hddtemp-0.3_beta10 70
-MD5 0441f48755331a54d70ab13db98b4117 files/digest-hddtemp-0.3_beta6 121
-MD5 0a2d5f9cdc1a222625e215b2b4025bb5 files/digest-hddtemp-0.3_beta8 70
-MD5 cf2e7fe80d99ed9dc9af37af25bb7692 files/hddtemp.db 11208
+MD5 b5d21577cb4a650110c271ac8c865169 hddtemp-0.3_beta10.ebuild 1151
 MD5 06b275391f52469a2773a41b9ccc48d6 files/digest-hddtemp-0.2 115
+MD5 0441f48755331a54d70ab13db98b4117 files/digest-hddtemp-0.3_beta6 121
+MD5 e42a32b0df5005090c105881a4cb02cc files/digest-hddtemp-0.3_beta6-r1 133
+MD5 0a2d5f9cdc1a222625e215b2b4025bb5 files/digest-hddtemp-0.3_beta8 70
 MD5 a4e0540c259f86b5ed2c4af2a7ead160 files/hddtemp-0.2-db_location.patch 593
+MD5 cf2e7fe80d99ed9dc9af37af25bb7692 files/hddtemp.db 11208
+MD5 fb10a6dcf20731e49bdd8a408702e27a files/digest-hddtemp-0.3_beta10 70
