@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/Attic/hddtemp-0.2.ebuild,v 1.16 2003/11/05 14:58:29 genone Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/Attic/hddtemp-0.2.ebuild,v 1.17 2004/01/04 16:20:24 weeve Exp $
 
 DESCRIPTION="A simple utility to read the temperature of SMART capable hard drives"
 SRC_URI="http://coredump.free.fr/linux/${P}.tar.gz
