@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/Attic/hddtemp-0.3_beta10.ebuild,v 1.1 2003/12/17 12:16:41 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/Attic/hddtemp-0.3_beta10.ebuild,v 1.2 2004/01/04 16:20:24 weeve Exp $
 
 MY_P=${P/_beta/-beta}
 
