@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/Attic/hddtemp-0.3_beta6-r1.ebuild,v 1.5 2003/11/05 14:58:29 genone Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/Attic/hddtemp-0.3_beta6-r1.ebuild,v 1.6 2004/01/04 16:20:24 weeve Exp $
 
 MY_P=${P/_beta/-beta}
 HDDDB_VERSION=20030609
