@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/Attic/hddtemp-0.3_beta8.ebuild,v 1.7 2003/12/17 12:16:41 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/Attic/hddtemp-0.3_beta8.ebuild,v 1.8 2004/01/04 16:20:24 weeve Exp $
 
 MY_P=${P/_beta/-beta}
 
@@ -8,7 +8,7 @@ DESCRIPTION="A simple utility to read the temperature of SMART capable hard driv
 HOMEPAGE="http://coredump.free.fr/linux/hddtemp.php"
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 ~ppc ~sparc ~amd64"
+KEYWORDS="x86 ~ppc sparc ~amd64"
 DEPEND="virtual/glibc
 	net-misc/wget"
 
