@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/hddtemp
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/ChangeLog,v 1.11 2003/12/17 12:16:41 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/ChangeLog,v 1.12 2004/01/04 16:20:24 weeve Exp $
+
+  04 Jan 2004; Jason Wever <weeve@gentoo.org> hddtemp-0.2.ebuild,
+  hddtemp-0.3_beta10.ebuild, hddtemp-0.3_beta6-r1.ebuild,
+  hddtemp-0.3_beta6.ebuild, hddtemp-0.3_beta8.ebuild:
+  Marked 0.3_beta8 stable on sparc and updated copyright dates on all ebuilds.
 
 *hddtemp-0.3_beta10 (17 Dec 2003)
 
